Manually fix up automated Guava avoidance; less clunky uses in tests
* ... where we don't really care about the specifics of which type of Set is instantiated