@@ -11,8 +11,6 @@ import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.fail;
 
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Set;
 import net.incongru.tichu.action.GameContext;
 import net.incongru.tichu.action.param.CheatDealParam;
@@ -53,7 +51,7 @@ class CheatDealTest {
                     ctx,
                     CheatDealParam.withActor(
                         UserId.of("jules"),
-                        new HashSet<>(Arrays.asList(MahJong, B2))
+                        Set.of(MahJong, B2)
                     )
                 );
         })
@@ -81,7 +79,7 @@ class CheatDealTest {
                     ctx,
                     CheatDealParam.withActor(
                         UserId.of("jules"),
-                        new HashSet<>(Arrays.asList(MahJong, B2))
+                        Set.of(MahJong, B2)
                     )
                 );
         }).doesNotThrowAnyException();
