@@ -7,9 +7,8 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashSet;
+import java.util.Set;
 import net.incongru.tichu.model.util.DeckConstants;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Disabled;
@@ -37,9 +36,7 @@ class TrickTest {
 
         // 1st player plays
         assertThat(
-            trick
-                .play(alex, new HashSet<>(Arrays.asList(DeckConstants.B2)))
-                .result()
+            trick.play(alex, Set.of(DeckConstants.B2)).result()
         ).isEqualTo(Play.PlayResult.Result.NEXTGOES);
 
         // players 2 and 3 pass, we're not done yet
@@ -96,9 +93,7 @@ class TrickTest {
 
         // 1st player plays
         assertThat(
-            trick
-                .play(alex, new HashSet<>(Arrays.asList(DeckConstants.B2)))
-                .result()
+            trick.play(alex, Set.of(DeckConstants.B2)).result()
         ).isEqualTo(Play.PlayResult.Result.NEXTGOES);
 
         // players 2 and 3 pass, we're not done yet
@@ -116,9 +111,7 @@ class TrickTest {
         );
         // player 4 plays another single, that's valid
         assertThat(
-            trick
-                .play(quinn, new HashSet<>(Arrays.asList(DeckConstants.G5)))
-                .result()
+            trick.play(quinn, Set.of(DeckConstants.G5)).result()
         ).isEqualTo(Play.PlayResult.Result.NEXTGOES);
         assertFalse(trick.isDone());
     }
